# DeliverU

./: .env.example  .gitignore  Gemfile  README.md  docker-compose.yml  makefile  package.json  restart.sh
app/admin/: admin_models.rb  admin_users.rb  analytics.rb  changepassword.rb  complaints.rb  customers.rb  dashboard.rb  drivers.rb  grocerrystores.rb  orders.rb  payables.rb  regions.rb  resturants.rb  settings.rb  (+1 more)
backend/: .dockerignore  Dockerfile  __init__.py  alembic.ini  broker.py  constants.py  main.py  pyproject.toml  redis_engine.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260419_0001_user_role_migration.py  92b2b88ac0ef_create_all_tables.py  a7478eab95b0_add_core_deliveru_domain_schema.py
backend/database/: crud.py  models.py  seed.py  session.py
backend/modules/: __init__.py
backend/modules/auth/: auth_controller.py  auth_dto.py  auth_repository.py  auth_service.py
backend/modules/items/: __init__.py  item_controller.py  item_dto.py  item_service.py
backend/modules/jobs/: __init__.py  example_jobs.py
backend/services/: __init__.py  auth.py  security.py
backend/services/runtime/: __init__.py  broker.py  redis_engine.py
backend/tests/: conftest.py  test_app_basics.py  test_auth_rbac.py
backend/utils/: exceptions.py  logging.py  middlewares.py  singleton.py
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
db/: schema.rb  seeds.rb
docs/: SRS.md  design.md  er-model.md  frontend-smoke-checklist.md  implement.md  standards.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: restart.sh  seed.sh
(+100 files in other folders)
